infrastructure/subsystems/storage-object-core/garage/ingress-web.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-web
  namespace: garage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${garage_web_root_domain},*.${garage_web_root_domain}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - secretName: garage-web-tls-cert
    hosts:
    - '${garage_web_root_domain}'
    - '*.${garage_web_root_domain}'
  rules:
  - host: '${garage_web_root_domain}'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garage
            port:
              number: 3902
  - host: '*.${garage_web_root_domain}'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: garage
            port:
              number: 3902
